--- a/SportUp/BonusRegistrationAlertViewController.storyboard
+++ b/SportUp/BonusRegistrationAlertViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pOD-bW-DCo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -149,8 +149,6 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bottomLayoutConstraint" destination="Neg-aD-szS" id="Irt-3n-m2o"/>
-                        <outlet property="contentView" destination="gd4-bs-LAV" id="PfV-7S-E8E"/>
                         <outlet property="nextButton" destination="fvW-1v-pRx" id="kQ1-2e-it6"/>
                         <outlet property="ticketsCountLabel" destination="vlh-fj-TNN" id="DBR-Ne-fwB"/>
                     </connections>
